<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TMD</string>
    <string name="feedback_mail_subject">Feedback of %s android app</string>
    <string name="feedback_mail_body">Phone model : %1$s\nApplication name : %2$s\nApplication version name: %3$s\nApplication version code : %4$s\nPhone android version : %5$s\n\nPlease provide more details below :\n</string>
    <string name="send_feedback">Send feedback</string>
    <string name="title_activity_login">Login</string>
    <string name="internet_error">No Internet Connection</string>
    <string name="failed_to_register_gcm">Failed to register gcm</string>
    <string name="title_activity_share_message">TMD</string>
    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
    <string name="libraries">Libraries</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="title_activity_about">About</string>
    <string name="rate_us">Rate us</string>
    <string name="chat">Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="talk_to_us">Talk to us</string>
    <string name="please_wait">Please wait...</string>
</resources>
