<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.v4creations.tmd.view.activity.TMDMainActivity">
    <item
        android:id="@+id/action_chat"
        android:title="@string/chat"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_rate_us"
        android:title="@string/rate_us"
        android:orderInCategory="200"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:title="@string/feedback"
        android:orderInCategory="300"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_libraries"
        android:title="@string/libraries"
        android:orderInCategory="400"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="500"
        android:showAsAction="never" />
</menu>
